updating etamen 3ala nafsak footer

--- a/sections/etamen-new-test.html
+++ b/sections/etamen-new-test.html
@@ -3207,46 +3207,51 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                    </div>
-                                    <div dir="rtl"
-                                        class="elementor-column elementor-col-20 elementor-top-column elementor-element elementor-element-c376f9e"
-                                        data-id="c376f9e" data-element_type="column">
-                                        <div class="elementor-column-wrap elementor-element-populated">
-                                            <div class="elementor-widget-wrap">
-                                                <div class="elementor-element elementor-element-f424d3f elementor-mobile-align-center elementor-widget elementor-widget-heading"
-                                                    data-id="f424d3f" data-element_type="widget"
-                                                    data-widget_type="heading.default">
-                                                    <div style="text-align: center;" class="elementor-widget-container">
-                                                        <h4 class="elementor-heading-title elementor-size-default">
-                                                            تواصل معنا
-                                                        </h4>
-                                                    </div>
-                                                </div>
-                                                <div class="elementor-element elementor-element-a7e6640 elementor-social-custom elementor-shape-circle elementor-widget elementor-widget-social-icons"
-                                                    data-id="a7e6640" data-element_type="widget"
-                                                    data-widget_type="social-icons.default">
-                                                    <div style="text-align: center;" class="elementor-widget-container">
-                                                        <div class="elementor-social-icons-wrapper">
-                                                            <a class="elementor-icon elementor-social-icon elementor-social-icon-facebook elementor-animation-grow"
-                                                                href="https://www.facebook.com/sona3.elkhair"
-                                                                target="_blank"> <span
-                                                                    class="elementor-screen-only">Facebook</span>
-                                                                <i class="fa fa-facebook"></i> </a>
-                                                            <a class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-animation-grow"
-                                                                href="https://twitter.com/MwsstSna" target="_blank">
-                                                                <span class="elementor-screen-only">Twitter</span>
-                                                                <i class="fa fa-twitter"></i> </a>
-                                                            <a class="elementor-icon elementor-social-icon elementor-social-icon-youtube elementor-animation-grow"
-                                                                href="https://www.youtube.com/channel/UC3QXK3mHDuPDfVHXhXpggbA"
-                                                                target="_blank"> <span
-                                                                    class="elementor-screen-only">Youtube</span>
-                                                                <i class="fa fa-youtube"></i> </a>
-                                                            <a class="elementor-icon elementor-social-icon elementor-social-icon-linkedin elementor-animation-grow"
-                                                                href="https://www.linkedin.com/in/sonaa-elkheir-foundation-85a412240/"
-                                                                target="_blank"> <span
-                                                                    class="elementor-screen-only">linkedin</span>
-                                                                <i class="fa fa-linkedin"></i> </a>
+                                            <div dir="rtl"
+                                                class="elementor-column elementor-col-20 elementor-top-column elementor-element elementor-element-c376f9e"
+                                                data-id="c376f9e" data-element_type="column">
+                                                <div class="elementor-column-wrap elementor-element-populated">
+                                                    <div class="elementor-widget-wrap">
+                                                        <div class="elementor-element elementor-element-f424d3f elementor-mobile-align-center elementor-widget elementor-widget-heading"
+                                                            data-id="f424d3f" data-element_type="widget"
+                                                            data-widget_type="heading.default">
+                                                            <div style="text-align: center;"
+                                                                class="elementor-widget-container">
+                                                                <h4
+                                                                    class="elementor-heading-title elementor-size-default">
+                                                                    تواصل معنا
+                                                                </h4>
+                                                            </div>
+                                                        </div>
+                                                        <div class="elementor-element elementor-element-a7e6640 elementor-social-custom elementor-shape-circle elementor-widget elementor-widget-social-icons"
+                                                            data-id="a7e6640" data-element_type="widget"
+                                                            data-widget_type="social-icons.default">
+                                                            <div style="text-align: center;"
+                                                                class="elementor-widget-container">
+                                                                <div class="elementor-social-icons-wrapper">
+                                                                    <a class="elementor-icon elementor-social-icon elementor-social-icon-facebook elementor-animation-grow"
+                                                                        href="https://www.facebook.com/sona3.elkhair"
+                                                                        target="_blank"> <span
+                                                                            class="elementor-screen-only">Facebook</span>
+                                                                        <i class="fa fa-facebook"></i> </a>
+                                                                    <a class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-animation-grow"
+                                                                        href="https://twitter.com/MwsstSna"
+                                                                        target="_blank">
+                                                                        <span
+                                                                            class="elementor-screen-only">Twitter</span>
+                                                                        <i class="fa fa-twitter"></i> </a>
+                                                                    <a class="elementor-icon elementor-social-icon elementor-social-icon-youtube elementor-animation-grow"
+                                                                        href="https://www.youtube.com/channel/UC3QXK3mHDuPDfVHXhXpggbA"
+                                                                        target="_blank"> <span
+                                                                            class="elementor-screen-only">Youtube</span>
+                                                                        <i class="fa fa-youtube"></i> </a>
+                                                                    <a class="elementor-icon elementor-social-icon elementor-social-icon-linkedin elementor-animation-grow"
+                                                                        href="https://www.linkedin.com/in/sonaa-elkheir-foundation-85a412240/"
+                                                                        target="_blank"> <span
+                                                                            class="elementor-screen-only">linkedin</span>
+                                                                        <i class="fa fa-linkedin"></i> </a>
+                                                                </div>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -3254,42 +3259,42 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="elementor-section elementor-top-section elementor-element elementor-element-234a86e elementor-section-stretched elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default"
-                            data-id="234a86e" data-element_type="section"
-                            data-settings="{&quot;stretch_section&quot;:&quot;section-stretched&quot;,&quot;background_background&quot;:&quot;classic&quot;}">
-                            <div class="elementor-container elementor-column-gap-no">
-                                <div class="elementor-row">
-                                    <div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-19e1c0d"
-                                        data-id="19e1c0d" data-element_type="column">
-                                        <div class="elementor-column-wrap elementor-element-populated">
-                                            <div class="elementor-widget-wrap">
-                                                <div class="elementor-element elementor-element-1246045 elementor-widget__width-auto elementor-widget elementor-widget-text-editor"
-                                                    data-id="1246045" data-element_type="widget"
-                                                    data-widget_type="text-editor.default">
-                                                    <div class="elementor-widget-container">
-                                                        <div class="elementor-text-editor elementor-clearfix">
-                                                            Developed with ❤️ by <a
-                                                                href="https://www.codexeg.net/"><span
-                                                                    style="color: #02590f;">CodeX
-                                                                    Egypt</span></a>
+                                <div class="elementor-section elementor-top-section elementor-element elementor-element-234a86e elementor-section-stretched elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default"
+                                    data-id="234a86e" data-element_type="section"
+                                    data-settings="{&quot;stretch_section&quot;:&quot;section-stretched&quot;,&quot;background_background&quot;:&quot;classic&quot;}">
+                                    <div class="elementor-container elementor-column-gap-no">
+                                        <div class="elementor-row">
+                                            <div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-19e1c0d"
+                                                data-id="19e1c0d" data-element_type="column">
+                                                <div class="elementor-column-wrap elementor-element-populated">
+                                                    <div class="elementor-widget-wrap">
+                                                        <div class="elementor-element elementor-element-1246045 elementor-widget__width-auto elementor-widget elementor-widget-text-editor"
+                                                            data-id="1246045" data-element_type="widget"
+                                                            data-widget_type="text-editor.default">
+                                                            <div class="elementor-widget-container">
+                                                                <div class="elementor-text-editor elementor-clearfix">
+                                                                    Developed with ❤️ by <a
+                                                                        href="https://www.codexeg.net/"><span
+                                                                            style="color: #02590f;">CodeX
+                                                                            Egypt</span></a>
+                                                                </div>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                    </div>
-                                    <div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-6ecceec"
-                                        data-id="6ecceec" data-element_type="column">
-                                        <div class="elementor-column-wrap elementor-element-populated">
-                                            <div class="elementor-widget-wrap">
-                                                <div class="elementor-element elementor-element-5e51a65 elementor-widget__width-auto elementor-widget elementor-widget-text-editor"
-                                                    data-id="5e51a65" data-element_type="widget"
-                                                    data-widget_type="text-editor.default">
-                                                    <div class="elementor-widget-container">
-                                                        <div class="elementor-text-editor elementor-clearfix">
-                                                            <p>All Rights Reserved | 2013 - 2022</p>
+                                            <div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-6ecceec"
+                                                data-id="6ecceec" data-element_type="column">
+                                                <div class="elementor-column-wrap elementor-element-populated">
+                                                    <div class="elementor-widget-wrap">
+                                                        <div class="elementor-element elementor-element-5e51a65 elementor-widget__width-auto elementor-widget elementor-widget-text-editor"
+                                                            data-id="5e51a65" data-element_type="widget"
+                                                            data-widget_type="text-editor.default">
+                                                            <div class="elementor-widget-container">
+                                                                <div class="elementor-text-editor elementor-clearfix">
+                                                                    <p>All Rights Reserved | 2013 - 2022</p>
+                                                                </div>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -3302,9 +3307,7 @@
                     </div>
                 </div>
             </div>
-    </div>
-    </div>
-    </footer>
+        </footer>
     </div>
     </div>
     <script>
@@ -3323,7 +3326,7 @@
             }
         })();
     </script> <a href="#" class="scrollup"><span class="icon fa fa-angle-up"></span></a>
-     <div class="handheld-footer-bar">
+    <div class="handheld-footer-bar">
         <ul class="columns-2">
             <li class="search" hidden> <a class="search-footer" href="#">Search</a>
                 <div class="site-search">
