--- a/sections/etamen-new-test.html
+++ b/sections/etamen-new-test.html
@@ -2819,146 +2819,34 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div id="give-form-61-wrap" class="give-form-wrap give-display-onpage" dir="rtl">
-                                        <form id="give-form-61-1" class="give-form give-form-61 give-form-type-multi"
-                                            action="donations/youth-in-action-against-poverty/?payment-mode=manual"
-                                            data-id="61-1" data-currency_symbol="&#36;" data-currency_code="USD"
-                                            data-currency_position="before" data-thousands_separator=","
-                                            data-decimal_separator="." data-number_decimals="2" method="post"> <span
-                                                class="give-hidden" style="display: none !important;"> <label
-                                                    for="give-form-honeypot-61"></label> <input
-                                                    id="give-form-honeypot-61" type="text" name="give-honeypot"
-                                                    class="give-honeypot give-hidden" /> </span> <input type="hidden"
-                                                name="give-form-id-prefix" value="61-1" /> <input type="hidden"
-                                                name="give-form-id" value="61" /> <input type="hidden"
-                                                name="give-form-title" value="Youth In Action Against Poverty" />
-                                            <input type="hidden" name="give-current-url" value="index.html" />
-                                            <input type="hidden" name="give-form-url" value="index.html" /> <input
-                                                type="hidden" name="give-form-minimum" value="5.00" /> <input
-                                                type="hidden" name="give-form-maximum" value="999999.99" /> <input
-                                                type="hidden" name="give-form-hash" value="bb4be8131d"
-                                                data-time="1660647009" data-nonce-life="86400"
-                                                data-donor-session="0" /><input type="hidden" name="give-price-id"
-                                                value="3" />
-                                            <fieldset class="give_donation_form_top">
-                                                <legend class="give_donation_form_top-label">تبرعك</legend>
-                                                <div class="give-total-wrap">
-                                                    <div class="give-donation-amount form-row-wide"> <span
-                                                            class="give-currency-symbol give-currency-position-before">جم</span>
-                                                        <label class="give-hidden" for="give-amount"></label> <input
-                                                            class="give-text-input give-amount-top" id="give-amount"
-                                                            name="give-amount" type="tel" placeholder="" value="100.00"
-                                                            autocomplete="off">
-                                                    </div>
-                                                </div>
-                                                <ul id="give-donation-level-button-wrap"
-                                                    class="give-donation-levels-wrap give-list-inline">
-                                                    <li><button type="button" data-price-id="0"
-                                                            class="give-donation-level-btn give-btn give-btn-level-0 "
-                                                            value="10.00" data-default="0">جم10.00</button></li>
-                                                    <li><button type="button" data-price-id="1"
-                                                            class="give-donation-level-btn give-btn give-btn-level-1 "
-                                                            value="25.00" data-default="0">جم25.00</button></li>
-                                                    <li><button type="button" data-price-id="2"
-                                                            class="give-donation-level-btn give-btn give-btn-level-2 "
-                                                            value="50.00" data-default="0">جم50.00</button></li>
-                                                    <li><button type="button" data-price-id="3"
-                                                            class="give-donation-level-btn give-btn give-btn-level-3 give-default-level"
-                                                            value="100.00" data-default="1">جم100.00</button>
-                                                    </li>
-                                                    <li><button type="button" data-price-id="5"
-                                                            class="give-donation-level-btn give-btn give-btn-level-5 "
-                                                            value="250.00" data-default="0">جم250.00</button>
-                                                    </li>
-                                                    <li><button type="button" data-price-id="custom"
-                                                            class="give-donation-level-btn give-btn give-btn-level-custom"
-                                                            value="custom">Custom Amount</button></li>
-                                                </ul>
-                                            </fieldset>
+                                    
 
-                                            <fieldset id="give-payment-mode-select">
-                                                <legend class="give-payment-mode-label">حدد طريقة الدفع <span
-                                                        class="give-loading-text"><span
-                                                            class="give-loading-animation"></span> </span>
-                                                </legend>
-                                                <div id="give-payment-mode-wrap">
-                                                    <ul id="give-gateway-radio-list">
-                                                        <li class="give-gateway-option-selected"> <input type="radio"
-                                                                name="payment-mode" class="give-gateway"
-                                                                id="give-gateway-manual-61-1" value="manual"
-                                                                checked='checked'> <label for="give-gateway-manual-61-1"
-                                                                class="give-gateway-option"
-                                                                id="give-gateway-option-manual">فوري /
-                                                                فيزا</label>
-                                                        </li>
-                                                        <li>
-                                                            <input type="radio" name="payment-mode" class="give-gateway"
-                                                                id="give-gateway-offline-61-1" value="offline">
-                                                            <label for="give-gateway-offline-61-1"
-                                                                class="give-gateway-option"
-                                                                id="give-gateway-option-offline">كاش</label>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </fieldset>
 
-                                            <div id="give_purchase_form_wrap">
-                                                <fieldset id="give_checkout_user_info" class="" style="float:right;">
-                                                    <legend>معلومات شخصية</legend>
-                                                    <p id="give-last-name-wrap"
-                                                        class="form-row form-row-last form-row-responsive"> <label
-                                                            class="give-label" for="give-last">الاسم الاخير <span
-                                                                class="give-tooltip hint--top hint--medium hint--bounce"
-                                                                aria-label="Last Name is used to personalize your donation record."
-                                                                rel="tooltip"><i
-                                                                    class="give-icon give-icon-question"></i></span>
-                                                        </label> <input class="give-input" type="text" name="give_last"
-                                                            autocomplete="family-name" id="give-last"
-                                                            placeholder="مثال: الباجوري" value="" />
-                                                    </p>
-                                                    <p id="give-first-name-wrap"
-                                                        class="form-row form-row-first form-row-responsive"> <label
-                                                            class="give-label" for="give-first"> الاسم الاول <span
-                                                                class="give-required-indicator">*</span> <span
-                                                                class="give-tooltip hint--top hint--medium hint--bounce"
-                                                                aria-label="First Name is used to personalize your donation record."
-                                                                rel="tooltip"><i
-                                                                    class="give-icon give-icon-question"></i></span>
-                                                        </label> <input class="give-input required" type="text"
-                                                            name="give_first" autocomplete="given-name"
-                                                            placeholder=" مثال: محمد" id="give-first" value="" required
-                                                            aria-required="true" /></p>
 
-                                                    <p id="give-email-wrap" class="form-row form-row-wide"> <label
-                                                            class="give-label" for="give-email">البريد الالكتروني
-                                                            <span class="give-required-indicator">*</span> <span
-                                                                class="give-tooltip hint--top hint--medium hint--bounce"
-                                                                aria-label="We will send the donation receipt to this address."
-                                                                rel="tooltip"><i
-                                                                    class="give-icon give-icon-question"></i></span>
-                                                        </label> <input class="give-input required" type="email"
-                                                            name="give_email" autocomplete="email"
-                                                            placeholder="username@example.com" id="give-email" value=""
-                                                            required aria-required="true" /></p>
-                                                </fieldset>
-                                                <fieldset id="give_purchase_submit" class="give-donation-submit"
-                                                    style="float: right;">
-                                                    <p id="give-final-total-wrap" class="form-wrap ">
-                                                        <span class="give-final-total-amount" data-total="100.00"
-                                                            style="text-align: right;">
-                                                            جم 100.00 </span>
-                                                        <span class="give-donation-total-label"
-                                                            style="text-align: right;"> مجموع التبرعات:
-                                                        </span>
-                                                    </p> <input type="hidden" name="give_action" value="purchase" />
-                                                    <input type="hidden" name="give-gateway" value="manual" />
-                                                    <div class="give-submit-button-wrap give-clearfix"><input
-                                                            type="submit" class="give-submit give-btn"
-                                                            id="give-purchase-button" name="give-purchase"
-                                                            value="تبرع الأن"
-                                                            data-before-validation-label="تبرع الأن" /> <span
-                                                            class="give-loading-animation"></span></div>
-                                                </fieldset>
+
+
+                                    <div style="text-align: center;" class="elementor-element elementor-element-1b0eebc elementor-widget__width-auto elementor-hidden-tablet elementor-hidden-phone elementor-button-primary elementor-widget elementor-widget-button"
+                                                            data-id="1b0eebc" data-element_type="widget"
+                                                            data-widget_type="button.default">
+                                                            <div class="elementor-widget-container">
+                                                                <div class="elementor-button-wrapper">
+                                                                    <a href="donation/index.html"
+                                                                        class="elementor-button-link elementor-button elementor-size-md"
+                                                                        role="button"> <span
+                                                                            class="elementor-button-content-wrapper">
+                                                                            <span
+                                                                                class="elementor-button-icon elementor-align-icon-left">
+                                                                                <i class="opal-icon-arrow-circle-right"
+                                                                                    aria-hidden="true"></i> </span>
+                                                                            <span class="elementor-button-text">تبرع
+                                                                                الأن</span> </span>
+                                                                    </a>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
+
+
                                             </div>
                                         </form>
                                     </div>
